9_ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: flow
  labels:
    name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - flow.tingtt.jp
      secretName: flow-tls-secret
  rules:
    - host: flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: flow-frontend
                port:
                  name: http
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/users/(.*)"
            backend:
              service:
                name: flow-users
                port:
                  number: 1323
          - pathType: Exact
            path: "/users$"
            backend:
              service:
                name: flow-users
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/projects/(.*)"
            backend:
              service:
                name: flow-projects
                port:
                  number: 1323
          - pathType: Exact
            path: "/projects$"
            backend:
              service:
                name: flow-projects
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/sprints/(.*)"
            backend:
              service:
                name: flow-sprints
                port:
                  number: 1323
          - pathType: Exact
            path: "/sprints$"
            backend:
              service:
                name: flow-sprints
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/todos/(.*)"
            backend:
              service:
                name: flow-todos
                port:
                  number: 1323
          - pathType: Exact
            path: "/todos$"
            backend:
              service:
                name: flow-todos
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/pomodoro/(.*)"
            backend:
              service:
                name: flow-pomodoro
                port:
                  number: 1323
          - pathType: Exact
            path: "/pomodoro$"
            backend:
              service:
                name: flow-pomodoro
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/records/(.*)"
            backend:
              service:
                name: flow-records
                port:
                  number: 1323
          - pathType: Exact
            path: "/records$"
            backend:
              service:
                name: flow-records
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/documents/(.*)"
            backend:
              service:
                name: flow-documents
                port:
                  number: 1323
          - pathType: Exact
            path: "/documents$"
            backend:
              service:
                name: flow-documents
                port:
                  number: 1323
    - host: api-flow.tingtt.jp
      http:
        paths:
          - pathType: Prefix
            path: "/mock/(.*)"
            backend:
              service:
                name: flow-mock
                port:
                  number: 1323
          - pathType: Exact
            path: "/mock$"
            backend:
              service:
                name: flow-mock
                port:
                  number: 1323
---
